--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Rock, paper, scissors</title>
 </head>
 <body>
+    <div id="container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="results">
+        <h4></h4>
+        <p>Score: 0 - 0</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
